# trade-buddy

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  ITERATIONS.md  PROJECT_OVERVIEW.md  README.md  SESSION_REPORT_2026-04-25.md  main.py  meeting_agents.py  prompts.py  requirements.txt  sample_input.json  webapp.py  人工智能导论.md
TradingAgents/: .gitignore  README.md  pyproject.toml
TradingAgents/Whale-watcher-master/: package-lock.json
TradingAgents/Whale-watcher-master/app/: layout.tsx
TradingAgents/Whale-watcher-master/components/: CongressMemberModal.tsx  Sidebar.tsx
TradingAgents/cli/: main.py  utils.py
TradingAgents/finnlp/utils/: get_proxy.py
TradingAgents/finvizfinance/: util.py
TradingAgents/reports/SPY_20260529_225449/: complete_report.md
TradingAgents/reports/SPY_20260530_103719/: complete_report.md
TradingAgents/tests/: conftest.py  test_autogen_pipeline.py  test_dataflows_config.py  test_winrate.py
TradingAgents/tradingagents/: __init__.py  default_config.py
TradingAgents/tradingagents/agents/: __init__.py  schemas.py
TradingAgents/tradingagents/autogen_agents/: analysts.py  debate.py  judge.py  researchers.py  runtime_tools.py  tot.py
TradingAgents/tradingagents/autogen_clients/: __init__.py  model_client.py  tools.py
TradingAgents/tradingagents/backtest/: __init__.py  winrate.py
TradingAgents/tradingagents/dataflows/: akshare_utils.py  congress_kadoa_utils.py  interface.py  sec_utils.py  (+3 more)
TradingAgents/webapp/: __main__.py  _sandbox_runner.py  backtest_engine.py  dashboard.py  financials.py  markets.py  quote.py  server.py  smartmoney.py
(+100 files in other folders)
