[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.5"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18",
    "alpaca-py>=0.21",
    "autogen-agentchat>=0.7",
    "autogen-ext[openai]>=0.7",
    "beautifulsoup4>=4.12",
    "cryptography>=42.0",
    "ddgs>=9.0",
    "lxml>=5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "backtrader>=1.9.78.123",
    "finnhub-python>=2.4",
    "pytrends>=4.9",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.scripts]
tradingagents = "cli.main:app"
tradingagents-web = "webapp.__main__:main"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*", "webapp*", "finnlp*", "finvizfinance*"]

[tool.setuptools.package-data]
cli = ["static/*"]
webapp = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
